[gd_scene load_steps=2 format=3 uid="uid://c8gf5gp4jy2fl"]

[ext_resource type="Script" path="res://Scripts/Intro.gd" id="1_intro"]

[node name="Intro" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_intro")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="SentenceContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SentenceLabel" type="Label" parent="SentenceContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 48
text = "Placeholder Text"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationTimer" type="Timer" parent="."]
wait_time = 1.0
one_shot = true

[node name="SkipLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -50.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 20
text = "Press any button to skip..."
horizontal_alignment = 1
vertical_alignment = 2

[connection signal="timeout" from="AnimationTimer" to="." method="_on_animation_timer_timeout"]

